--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,10 @@
 <% layout('layouts/lboilerplate')%>
 <div class="row">
-    <h1 class="text-center">Hey   </h1>
+
+ <h3 class="text-center">Admin Credentials : username = admin, Password = admin   </h3>
+  <h3 class="text-center">Sample Alumni Credentials : username = 160120737173, Password = 160120737173   </h3>
+
+     <h1 class="text-center">Hey   </h1>
     <div class="col-6 offset-3">
         <form action="/home" method="post" novalidate class="validated-form">
             <div class="mb-3">
