--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/lboilerplate')%>
 <div class="row">
 
- <h3 class="text-center">Admin Credentials : username = admin, Password = admin   </h3>
-  <h3 class="text-center">Sample Alumni Credentials : username = 160120737173, Password = 160120737173   </h3>
+ <p class="text-center">Admin Credentials : username = admin, Password = admin   </p>
+  <p class="text-center">Sample Alumni Credentials : username = 160120737173, Password = 160120737173   </p>
 
      <h1 class="text-center">Hey   </h1>
     <div class="col-6 offset-3">
