--- a/views/alumni.ejs
+++ b/views/alumni.ejs
@@ -13,7 +13,7 @@
 <h1>Alumni</h1>
  
 <form class="d-flex">
-    <input class="form-control me-2" type="search" placeholder="Search based on title" aria-label="Search" name="title">
+    <input class="form-control me-2" type="search" placeholder="Search based on roll no" aria-label="Search" name="title">
     <button class="btn btn-primary" type="submit">Search</button>
 </form>
 
