--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 <div class="row">
 
     <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search based on title" aria-label="Search" name="title">
+        <input class="form-control me-2" type="search" placeholder="Search based on Title" aria-label="Search" name="title">
         <button class="btn btn-primary" type="submit">Search</button>
     </form>
      
