Fixed Event card-size

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
     <div class="col">
         <div class="card" style="width: 18rem; margin : 20px;">
-            <img src="<%=campground.posterUrl%>" class="card-img-top" alt="Fissure in Sandstone"/>
+            <img style="height: 300px;" src="<%=campground.posterUrl%>" class="card-img-top" alt="Fissure in Sandstone"/>
             <div class="card-body">
               <h5 class="card-title" style="text-align: center;" ><%= campground.title %> </h5>
               <p class="card-text"   style="text-align: center;"   > On <%= campground.date %></p>
