--- a/views/alumni.ejs
+++ b/views/alumni.ejs
@@ -23,7 +23,7 @@
 <div class="card" mb-3>
     <div class="row">
         <div class="col-md-4">
-            <img class="img-fluid" alt="" src="<%=campground.image%>">
+            <img style="height: 350px;" class="img-fluid" alt="" src="<%=campground.image%>">
         </div>
         <div class="col-md-8">
             <div class="card-body">
